--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@measured/puck": "^0.13.1",
     "@ramonak/react-progress-bar": "^5.3.0",
+    "@rive-app/react-canvas": "^4.14.5",
     "cookies-next": "^4.1.0",
     "lexorank": "^1.0.5",
     "mongodb": "^6.3.0",
