--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@measured/puck": "^0.13.1",
     "@ramonak/react-progress-bar": "^5.3.0",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@rive-app/react-canvas": "^4.14.5",
     "cookies-next": "^4.1.0",
     "lexorank": "^1.0.5",
@@ -25,7 +27,8 @@
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "three": "^0.170.0"
   },
   "browser": {
     "child_process": false
