--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@emotion/css": "^11.13.5",
     "@measured/puck": "^0.13.1",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@rive-app/react-canvas": "^4.14.5",
     "cookies-next": "^4.1.0",
+    "image-extensions": "^1.1.0",
+    "is-url": "^1.2.4",
     "lexorank": "^1.0.5",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -24,10 +27,15 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
+    "react-math-keyboard": "^1.6.0",
+    "react-mathquill": "^1.0.3",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "slate": "^0.112.0",
+    "slate-history": "^0.110.3",
+    "slate-react": "^0.112.0",
     "three": "^0.170.0"
   },
   "browser": {
