--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookies-next": "^4.1.0",
     "image-extensions": "^1.1.0",
     "is-url": "^1.2.4",
+    "katex": "^0.16.18",
     "lexorank": "^1.0.5",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
@@ -27,7 +28,6 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
-    "react-math-keyboard": "^1.6.0",
     "react-mathquill": "^1.0.3",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
